[project]
name = "nfl-fantasy-draft-mcp"
version = "0.1.0"
description = "MCP server for fantasy football draft board analysis"
readme = "README.md"
authors = [
    { name = "domchao", email = "d.chaopradith@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
